# Monte-Carlo-Integration

./: .clang-tidy  CMakeLists.txt  README.md  main.c  main.ilk
Monte-Carlo/: CMakeLists.txt  Draw.h  DrawDepend.h  DrawGraph.h  Monte-Carlo.hpp  gnuplot.h  main.cpp  ratios_of_Student.txt  test.cpp
