cmake_minimum_required(VERSION 3.10.0)
project("Monte-Carlo" C)
set(CMAKE_C_STANDARD 17)
list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
add_executable(Monte-Carlo main.c)
# include(cmake/StandardProjectSettings.cmake)
# include(cmake/CompilerWarnings.cmake)
# set_project_warnings(default)
# set(SOURCE main.c)
# target_link_libraries(Monte-Carlo PUBLIC)