cmake_minimum_required(VERSION 3.10.0)
add_executable(Monte-Carlo-test Monte-Carlo.hpp test.cpp ../fparser.cc)
target_link_libraries(Monte-Carlo-test PUBLIC doctest default)
add_test(NAME Monte-Carlo-test COMMAND Monte-Carlo-test --force-colors -d)
add_custom_target(cloud-test COMMAND Monte-Carlo-test --force-colors -d)

add_executable(Monte-Carlo Monte-Carlo.hpp main.cpp ../fparser.cc)
target_link_libraries(Monte-Carlo PUBLIC default)

# add_library(${PROJECT_NAME}_lib SHARED ../fparser4.5.2/fparser.cc)
# add_executable(fparser ../fparser.cc)
# target_link_libraries(fparser PUBLIC ../fparser.cc default)
# add_subdirectory(fparser4.5.2)
# include(fparser4.5.2)
# add_library(fparser4.5.2)
# find_library(fparser4.5.2)
# target_link_libraries(Monte-Carlo)